@@ -2,14 +2,18 @@ $Id$
 
 2016-03-18  Christian Franke  <franke@computer.org>
 
-	Add basic NVMe support for smartctl (-i -H -A):
+	Add basic NVMe support for smartctl (-i -H -A) on Linux:
 	Makefile.am: Add new files.
 	dev_interface.cpp, dev_interface.h: Add class nvme_device.
+	linux_nvme_ioctl.h: New file imported from Linux kernel sources
+	(include/uapi/linux/nvme_ioctl.h 9d99a8d 2015-10-09).
 	nvmecmds.cpp, nvmecmds.h: New module with NVMe command wrapper
 	functions for smartctl and smartd.
 	nvmeprint.cpp, nvmeprint.h: New module with nvmePrintMain().
 	smartctl.cpp: Add nvmePrintMain() support.
+	os_linux.cpp: Add class linux_nvme_device.
 	os_win32/vc10/smart*.vcxproj*: Add new files.
+	smartctl.8.in: Document NVMe support.
 
 2016-03-14  Douglas Gilbert  <dgilbert@interlog.com>
 
